<resources>
    <string name="app_name">QuizApp</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="less">Less</string>
    <string name="greater">Greater</string>
    <string name="equal">==</string>
    <string name="correct">""</string>
    <string name="question_2">Question 2</string>
    <string name="question_1">Question 1</string>
    <string name="the_quiz">The QUIZ!</string>
    <string name="timer">50</string>
    <string name="score">10/10</string>
    <string name="timetv">TIME LEFT</string>
    <string name="scoretv">SCORE</string>
    <string name="seconds">seconds</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Your Score:</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="incorrect_answers">Incorrect Answers:</string>
    <string name="scoreTextF">10/10</string>
    <string name="correctTextF">99</string>
    <string name="incorrectTextF">99</string>
</resources>